<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".GameActivity">

    <fragment
        android:id="@+id/luarFragment"
        android:name="com.example.lulab1app.LuFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/target"
        android:text="@string/score_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/Timer"
        android:text="@string/timer_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="40sp" />

    <Button
        android:id="@+id/CatchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:background="#32000000"
        android:text="@string/button_name" />

    <View
        android:layout_width="4dp"
        android:layout_height="25dp"
        android:background="#7a000000"
        android:layout_centerInParent="true" />

    <View
        android:layout_width="25dp"
        android:layout_height="4dp"
        android:background="#7a000000"
        android:layout_centerInParent="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="97dp"
        android:layout_height="99dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#03000000"
        app:srcCompat="@android:drawable/btn_radio"
        android:contentDescription="@string/catchtarget" />

</RelativeLayout>